--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,12 @@ body {
   background: #e7aa03;
 }
 
+/* Footer foto's */
+.nlvlag, .socialMedia {
+  height: 25px;
+}
+
+
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .row, .navbar {   
