--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,8 @@ body {
   height: 25px;
 }
 
-img {
-  width: 100%
+.topFoto {
+  width: 100%;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
